--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
 # This file ste sconfigurations options for our jekyl website
-title: CS-340-Sample
+title: CS-340 Sample
 description: This is a test of CI/CD with Github pages
-theme: jekyll.theme-minimal
+theme: jekyll-theme-minimal
